# MPDP

./: .clang-format  .gitignore  CMakeLists.txt  CMakeMSCuda.cmake  CMakeMSVC.cmake  CMakePresets.json  CMakeSettings.json  CMakeUnix.cmake  CMakeUnixCuda.cmake  Dockerfile  Doxyfile  MPDPCCConfig.cmake.in  Makefile  README.md  clothoidLib.asylib  compile.sh
cmake/: build_cu.cmake  build_cxx.cmake  build_examples.cmake  build_tests.cmake  dependencies.cmake  options.cmake
cmake-cu-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake-cu-debug/.cmake/api/v1/reply/: cache-v2-b29ee3abfb1ab882999f.json  cmakeFiles-v1-2a353f8f2b9e41fa98ca.json  codemodel-v2-4aff7493e01ef623b2a8.json  index-2022-11-06T14-41-17-0315.json  target-MPMDCU-2bd93ad2e68a759a3dcc.json  target-MPMDCU_exec-a9b5cba71bb244c7a160.json  toolchains-v1-a3046bdab046fbcf0aed.json
cmake-cu-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake-cu-release/.cmake/api/v1/reply/: cache-v2-c44c260148d24ea3b45d.json  cmakeFiles-v1-0642deab87052cd8e91d.json  codemodel-v2-ca34c0d656864a798202.json  index-2022-11-06T14-41-17-0314.json  target-MPMDCU-d77e4cf477ae996077bc.json  target-MPMDCU_exec-e891956c34de22ff3c29.json
examples/: README.md
examples/3PMD/: 3PMD.cc  3PMD.hh  README.md  main.cc
examples/P2PDubinsDataset/: P2PDubinsDataset.cc  P2PDubinsDataset.hh  README.md  main.cc
examples/P2PRSDataset/: README.md  main.cc
exec/: main.cc  main.cu
include/: IOSettings.hh  IOUtils.hh  asyplot.hh  tests.hh  typedefs.hh  utilities.hh
norProject/: AsyPlot.cc  IOUtils.hh  Makefile  generator.hh  main.cc  main.cu
srcCC/: dp.cc  dubins.cc  math_utils.cc  rs.cc
srcCC/include/: clothoidG1.hh  configuration.hh  curve.hh  dp.hh  dubins.hh  math_utils.hh  rs.hh  utils.hh
srcCU/: asyplot.cu  dp.cu  dubins.cu  utils.cu
srcCU/include/: clothoidG1.hh  configuration.cuh  constants.cuh  curve.cuh  dp.cuh  dubins.cuh  utils.cuh
test/: RSTest.cc  clothoidG1Test.cc  configurationTest.cc  dubinsTest.cc
testResults/tabs/: tab.tex  tabs.tex
